--- a/s-services.html
+++ b/s-services.html
@@ -21,7 +21,7 @@
         <li><a href="">Contact</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Blog</a></li>
-        <li><a href="">Work</a></li>
+        <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
@@ -81,10 +81,8 @@
                     <h2>UX Design</h2>
                     <div class="tiny-underline-left-grn"></div>
                       <ul>
-                        <li>Website development</li>
-                        <li>Back end development</li>
-                        <li>Mobile development</li>
-                        <li>UI Design</li>
+                        <li>Single page apps</li>
+                        <li>Interactive tools</li>
                       </ul>
                     </div></a>
                     <a href="#">
@@ -191,7 +189,7 @@
         <div class="col-sm-12 col-md-12">
             <div class="content-blocks sm-content-blocks">
                 <h2>we know programming</h2>
-                <div class="red-underline"></div>
+                <div class="grn-underline"></div>
             </div>
         </div>
     </div>
@@ -230,22 +228,12 @@
                     </div>
                 </div>
             </div>
-            <div class="hoverEffects svg-wrap">
-                <svg width="64" height="64" viewBox="0 0 64 64">
-                    <path id="arrow-left-4" d="M15.946 48l0.003-10.33 47.411 0.003v-11.37h-47.414l0.003-10.304-15.309 16z" />
-                </svg>
-                <svg width="64" height="64" viewBox="0 0 64 64">
-                    <path id="arrow-right-4" d="M48.058 48l-0.003-10.33-47.414 0.003v-11.37h47.418l-0.003-10.304 15.306 16z" />
-                </svg>
-            </div>
-            <nav id="nav-arrows" class="nav-roundslide">
+            <nav class="nav-fillpath" id="nav-arrows">
                 <a class="prev" href="/item1">
-                    <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-left-4"></svg></span>
-                    <h3>Prev Client...</h3>
+                    <span class="icon-wrap"></span>
                 </a>
                 <a class="next" href="/item3">
-                    <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-right-4"></svg></span>
-                    <h3>Next Client...</h3>
+                    <span class="icon-wrap"></span>
                 </a>
             </nav>
             <nav id="nav-dots" class="nav-dots">
