--- a/services.html
+++ b/services.html
@@ -19,9 +19,9 @@
     <ul>
         <li><a href="" burger="01" class="hamburger-trigger"></a></li>
         <li><a href="">Contact</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="">Blog</a></li>
-        <li><a href="">Work</a></li>
+        <li><a href="work.html">Work</a></li>
         <li><a href="">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
@@ -185,7 +185,7 @@
 
 <!-- breaker -->
 
-    <div class="breakers cloud-based">
+    <div class="breakers cloud-based cloudParallax">
         <main class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
