--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head class="no-js">
     <meta charset="UTF-8">
-    <title>Valtira | Services</title>
+    <title>Valtira | Contact</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -22,7 +22,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="work.html">Work</a></li>
-        <li><a href="" class="active">Services</a></li>
+        <li><a href="servicess.html" class="active">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
@@ -58,106 +58,10 @@
 <header class="servicesHeader">
     <div class="jumboOverlay">
         <main class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="content-blocks inner-header-blocks">
-                        <h2>our services</h2>
-                        <div class="grn-underline"></div>
-                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                    </div>
-                </div>
-            </div>
+
         </main>
     </div>
 </header>
-
-<!-- main services boxes -->
-
-<div class="lmfao">
-    <!-- web development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su4.jpg" alt="img15"/>
-            <figcaption>
-                <h2>Web development</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-    <!-- web application development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su2.jpg" alt="img15"/>
-            <figcaption>
-                <h2>web Applications</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-    <!-- web application development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su5.jpg" alt="img15"/>
-            <figcaption>
-                <h2>Technology Integrations</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-    <!-- web application development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su2.jpg" alt="img15"/>
-            <figcaption>
-                <h2>Cloud Solutions</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-    <!-- web application development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su4.jpg" alt="img15"/>
-            <figcaption>
-                <h2>Content Management</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-    <!-- web application development -->
-    <div class="grid">
-        <figure class="effect-chico">
-            <img src="img/su2.jpg" alt="img15"/>
-            <figcaption>
-                <h2>Digital Marketing</h2>
-                <p>some cool description.</p>
-                <a href="#">View more</a>
-            </figcaption>
-        </figure>
-    </div>
-</div>
-
-<!-- breaker -->
-
-    <div class="breakers cloud-based cloudParallax">
-        <main class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="content-blocks">
-                        <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
-                        <div class="red-underline "></div>
-                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                        <a class="btn white-btn btn-4 btn-4e">our approach</a>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
 
 <!-- content blocks -->
 
