--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <nav class="topNav">
     <ul>
         <li><a href="" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="">Home</a></li>
+        <li><a href="" class="active">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
 </nav>
@@ -43,9 +43,10 @@
     </div>
     <a href="#">Home</a>
     <a href="services.html">Services</a>
-    <a href="#">Work</a>
+    <a href="">Approach</a>
+    <a href="work.html">Work</a>
     <a href="#">Blog</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     <a href="#">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
