--- a/s-services.html
+++ b/s-services.html
@@ -22,7 +22,7 @@
         <li><a href="">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="work.html">Work</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="services.html" class="active">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
@@ -40,9 +40,10 @@
     </div>
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
-    <a href="#">Work</a>
+    <a href="">Approach</a>
+    <a href="work.html">Work</a>
     <a href="#">Blog</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     <a href="#">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
@@ -54,7 +55,7 @@
 
 <!-- header -->
 
- <header class="servicesHeader2">
+ <header class="servicesHeader">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
