--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
         <li><a href="">Contact</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="">Blog</a></li>
-        <li><a href="">Work</a></li>
+        <li><a href="" class="active">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
@@ -39,10 +39,11 @@
         </div>
     </div>
     <a href="index.html">Home</a>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
+    <a href="">Approach</a>
     <a href="#">Work</a>
     <a href="#">Blog</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     <a href="#">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
@@ -91,65 +92,65 @@
         <div class="row">
             <div class="col-xw-12 col-sm-6 col-md-6">
                 <div class="content-image-containers left-content-image"></div>
-                <pre class="pre2">"Lorem ipsum dolor sit amet, consectetur."</pre>
+                <pre class="pre2">"This is a caption mark that describes the photo."</pre>
             </div>
             <div class="col-xw-12 col-sm-6 col-md-6">
                 <div class="content-image-containers right-content-image"></div>
             </div>
         </div>
     </div>
-<br/>
-<!-- bleed left -->
-
-<div class="bleed-left-image"></div>
-<div class="bleed-left-text">
-    <h2>Some awesome title</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-</div>
-
-<!-- bleed right -->
-
-<div class="bleed-right-text">
-    <h2>awesomeness</h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur.
-    </p>
-</div>
-<div class="bleed-right-image"></div>
+    <br/>
 
 <!-- main content blocks -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <div class="content-blocks">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-12">
+            <div class="contentParagraphBlocks">
+                <h2>method to the madness</h2>
+                <div class="grn-underline"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor.</p>
-                </div>
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <img src="img/su2.jpg" class="negativeLeftImage mobilize" width="600px" align="left"/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit.
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum.</p><br/>
+
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit.
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p><br/>
+
+                <img src="img/su2.jpg" class="negativeRightImage mobilize" width="600px" align="right"/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit.
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</p>
+
             </div>
         </div>
     </div>
+</div>
 
 <!-- breaker -->
 
