hover effect removed on mobile, contact button changed, breaker in services removed, work page in process

--- a/services.html
+++ b/services.html
@@ -17,12 +17,12 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="work.html">Work</a></li>
-        <li><a href="" class="active">Services</a></li>
+        <li><a href="services.html" class="active">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
@@ -39,12 +39,12 @@
         </div>
     </div>
     <a href="index.html">Home</a>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
     <a href="">Approach</a>
     <a href="work.html">Work</a>
-    <a href="#">Blog</a>
+    <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
@@ -55,7 +55,7 @@
 
 <!-- header -->
 
-<header class="servicesHeader">
+<header class="servicesHeader2">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
@@ -73,15 +73,30 @@
 
 <!-- main services boxes -->
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12">
+                <div class="content-blocks">
+                <p>A subtitle that describes our services</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- main services grid
+================================================
+FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
+==============================================-->
+
 <div class="lmfao">
     <!-- web development -->
     <div class="grid">
         <figure class="effect-chico">
             <img src="img/su4.jpg" alt="img15"/>
             <figcaption>
-                <h2>Web development</h2>
+                <h2>Web development</h2></a>
                 <p>some cool description.</p>
-                <a href="#">View more</a>
+                <a href="s-services.html">View more</a>
             </figcaption>
         </figure>
     </div>
@@ -141,23 +156,6 @@
         </figure>
     </div>
 </div>
-
-<!-- breaker -->
-
-    <div class="breakers cloud-based cloudParallax">
-        <main class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="content-blocks">
-                        <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
-                        <div class="red-underline "></div>
-                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                        <a class="btn white-btn btn-4 btn-4e">our approach</a>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
 
 <!-- content blocks -->
 
