--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="" class="active">About</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
@@ -42,9 +42,9 @@
     <a href="services.html">Services</a>
     <a href="">Approach</a>
     <a href="work.html">Work</a>
-    <a href="#">Blog</a>
-    <a href="">About</a>
-    <a href="#">Contact</a>
+    <a href="blog.html">Blog</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
