--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="work.html">Work</a></li>
-        <li><a href="servicess.html" class="active">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
@@ -39,12 +39,12 @@
         </div>
     </div>
     <a href="index.html">Home</a>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
     <a href="">Approach</a>
     <a href="work.html">Work</a>
-    <a href="#">Blog</a>
+    <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
@@ -55,28 +55,126 @@
 
 <!-- header -->
 
-<header class="servicesHeader">
+<header class="singleServices">
     <div class="jumboOverlay">
         <main class="container">
-
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    <div class="content-blocks inner-header-blocks">
+                        <h2>get in touch</h2>
+                        <div class="grn-underline"></div>
+                        <p>Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </header>
 
-<!-- content blocks -->
+<!-- main services boxes -->
 
-    <main class="container">
+    <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
-                    <h2>method to the madness</h2>
-                    <div class="grn-underline"></div>
-                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                    <a class="btn purp-btn btn-3 btn-3e">our approach</a>
+                <p>We deliver enterprise class websites.</p>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+
+<!-- contact form -->
+
+<form class="cd-form floating-labels">
+    <fieldset>
+        <legend>Business / Name</legend>
+
+        <div class="error-message hide">
+            <p>Oops, a field was invalid.</p>
+        </div>
+
+        <div class="icon">
+            <label class="cd-label" for="cd-name">Name</label>
+            <input class="user" type="text" name="cd-name" id="cd-name" required>
+        </div>
+
+        <div class="icon">
+            <label class="cd-label" for="cd-company">Company</label>
+            <input class="company" type="text" name="cd-company" id="cd-company">
+        </div>
+
+        <div class="icon">
+            <label class="cd-label" for="cd-email">Email</label>
+            <input class="email" type="email" name="cd-email" id="cd-email" required>
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend>Work with us</legend>
+        <div>
+            <h4>Budget</h4>
+            <p class="cd-select icon">
+                <select class="budget">
+                    <option value="0">Select Budget</option>
+                    <option value="1">&lt; $5000</option>
+                    <option value="2">$5000 - $10000</option>
+                    <option value="3">&gt; $10000</option>
+                </select>
+            </p>
+        </div>
+
+        <div>
+            <h4>Project type</h4>
+
+            <ul class="cd-form-list">
+                <li>
+                    <input type="radio" name="radio-button" id="cd-radio-1" checked>
+                    <label for="cd-radio-1">Choice 1</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="radio-button" id="cd-radio-2">
+                    <label for="cd-radio-2">Choice 2</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="radio-button" id="cd-radio-3">
+                    <label for="cd-radio-3">Choice 3</label>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>Features</h4>
+
+            <ul class="cd-form-list">
+                <li>
+                    <input type="checkbox" id="cd-checkbox-1">
+                    <label for="cd-checkbox-1">Option 1</label>
+                </li>
+
+                <li>
+                    <input type="checkbox" id="cd-checkbox-2">
+                    <label for="cd-checkbox-2">Option 2</label>
+                </li>
+
+                <li>
+                    <input type="checkbox" id="cd-checkbox-3">
+                    <label for="cd-checkbox-3">Option 3</label>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icon">
+            <label class="cd-label" for="cd-textarea">Project description</label>
+            <textarea class="message" name="cd-textarea" id="cd-textarea" required></textarea>
+        </div>
+
+        <div>
+            <input type="submit" id="submit" value="Send Message">
+        </div>
+    </fieldset>
+</form>
 
 <!-- footer -->
 
@@ -87,7 +185,7 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8">
             <ul class="lower-links">
             <li><a href="#">Work</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Approach</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Careers</a></li>
@@ -98,8 +196,6 @@
     </div>
 </div>
 
-<!-- head footer -->
-
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
@@ -109,8 +205,6 @@
             </div>
         </div>
     </div>
-
-<!-- social media -->
 
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
