--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
 </nav>
@@ -41,13 +41,13 @@
             <span></span>
         </div>
     </div>
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="">Approach</a>
     <a href="work.html">Work</a>
-    <a href="#">Blog</a>
+    <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
@@ -61,7 +61,8 @@
 <div class="vidWrap">
     <div class="out-video">
         <video autoplay loop muted poster="img/coffee.jpg" id="bgvid" width="100%" height="100%">
-                <source src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" type="video/mp4"/>
+            <source src="videos/agile.mp4" />
+            <!-- <source src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" type="video/mp4"/> -->
         </video>
         <div class="jumboOverlay">
             <section class="homepageHeader">
