--- a/s-services.html
+++ b/s-services.html
@@ -17,10 +17,10 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="services.html" class="active">Services</a></li>
         <li><a href="index.html">Home</a></li>
@@ -42,9 +42,9 @@
     <a href="services.html">Services</a>
     <a href="">Approach</a>
     <a href="work.html">Work</a>
-    <a href="#">Blog</a>
+    <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
@@ -55,7 +55,7 @@
 
 <!-- header -->
 
- <header class="servicesHeader">
+ <header class="singleServices">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
@@ -229,14 +229,6 @@
                     </div>
                 </div>
             </div>
-            <nav class="nav-fillpath" id="nav-arrows">
-                <a class="prev" href="/item1">
-                    <span class="icon-wrap"></span>
-                </a>
-                <a class="next" href="/item3">
-                    <span class="icon-wrap"></span>
-                </a>
-            </nav>
             <nav id="nav-dots" class="nav-dots">
                 <span class="nav-dot-current"></span>
                 <span></span>
