--- a/work.html
+++ b/work.html
@@ -17,11 +17,11 @@
 
 <nav class="topNav">
     <ul>
-        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="" class="active">Work</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="work.html" class="active">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
@@ -41,10 +41,10 @@
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="">Approach</a>
-    <a href="#">Work</a>
-    <a href="#">Blog</a>
+    <a href="work.html">Work</a>
+    <a href="blog.html">Blog</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
     <div href="#" class="">
         <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
         <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
@@ -71,103 +71,91 @@
     </div>
 </header>
 
-<!-- main content blocks -->
+<!-- main services boxes -->
 
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor.</p>
+                <p>A subtitle that describes our services</p>
                 </div>
             </div>
         </div>
     </div>
 
-<!-- main content images -->
+<!-- main services grid
+================================================
+FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
+==============================================-->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xw-12 col-sm-6 col-md-6">
-                <div class="content-image-containers left-content-image"></div>
-                <pre class="pre2">"This is a caption mark that describes the photo."</pre>
-            </div>
-            <div class="col-xw-12 col-sm-6 col-md-6">
-                <div class="content-image-containers right-content-image"></div>
-            </div>
-        </div>
+<div class="lmfao">
+    <!-- web development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/work/famousdaves.png" alt="img15"/>
+            <figcaption>
+                <h2>LMC</h2></a>
+                <p>some cool description.</p>
+                <a href="s-services.html">View more</a>
+            </figcaption>
+        </figure>
     </div>
-    <br/>
-
-<!-- main content blocks -->
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-12">
-            <div class="contentParagraphBlocks">
-                <h2>method to the madness</h2>
-                <div class="grn-underline"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                <img src="img/su2.jpg" class="negativeLeftImage mobilize" width="600px" align="left"/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit.
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum.</p><br/>
-
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit.
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p><br/>
-
-                <img src="img/su2.jpg" class="negativeRightImage mobilize" width="600px" align="right"/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,  sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit.
-                labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur.</p>
-
-            </div>
-        </div>
+    <!-- web application development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/work/macys.png" alt="img15"/>
+            <figcaption>
+                <h2>famous daves</h2>
+                <p>some cool description.</p>
+                <a href="#">View more</a>
+            </figcaption>
+        </figure>
+    </div>
+    <!-- web application development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/su5.jpg" alt="img15"/>
+            <figcaption>
+                <h2>macy's</h2>
+                <p>some cool description.</p>
+                <a href="#">View more</a>
+            </figcaption>
+        </figure>
+    </div>
+    <!-- web application development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/su2.jpg" alt="img15"/>
+            <figcaption>
+                <h2>medtronic</h2>
+                <p>some cool description.</p>
+                <a href="#">View more</a>
+            </figcaption>
+        </figure>
+    </div>
+    <!-- web application development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/su4.jpg" alt="img15"/>
+            <figcaption>
+                <h2>scouts software</h2>
+                <p>some cool description.</p>
+                <a href="#">View more</a>
+            </figcaption>
+        </figure>
+    </div>
+    <!-- web application development -->
+    <div class="grid">
+        <figure class="effect-chico">
+            <img src="img/su2.jpg" alt="img15"/>
+            <figcaption>
+                <h2>sun country</h2>
+                <p>some cool description.</p>
+                <a href="#">View more</a>
+            </figcaption>
+        </figure>
     </div>
 </div>
-
-<!-- breaker -->
-
-    <div class="breakers cloud-based cloudParallax">
-        <main class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="content-blocks">
-                        <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
-                        <div class="red-underline "></div>
-                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                        <a class="btn white-btn btn-4 btn-4e">our approach</a>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
 
 <!-- content blocks -->
 
@@ -194,12 +182,12 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8">
             <ul class="lower-links">
             <li><a href="#">Work</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Approach</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="approach.html">Approach</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="#">Careers</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
