work imagery inserted as placeholders

--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
 
 <!-- main services grid
 ================================================
-FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
+FOR GRID: IMAGE SIZE MUST ALL BE SAME: 825 X 550
 ==============================================-->
 
 <div class="lmfao">
@@ -198,8 +198,7 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <div class="footer-blocks">
-                <h2>work that matters</h2>
-                <div class="red-underline"></div>
+                <h2>do work that matters</h2>
             </div>
         </div>
     </div>
