--- a/work.html
+++ b/work.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
-                <p>A subtitle that describes our services</p>
+                <p>A subtitle that describes our work</p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
 
 <!-- main services grid
 ================================================
-FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
+FOR GRID: IMAGE SIZE MUST ALL BE SAME: 825 X 550
 ==============================================-->
 
 <div class="lmfao">
@@ -94,7 +94,7 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
         <figure class="effect-chico">
             <img src="img/work/famousdaves.png" alt="img15"/>
             <figcaption>
-                <h2>LMC</h2></a>
+                <h2>1st client</h2></a>
                 <p>some cool description.</p>
                 <a href="s-services.html">View more</a>
             </figcaption>
@@ -105,7 +105,7 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
         <figure class="effect-chico">
             <img src="img/work/macys.png" alt="img15"/>
             <figcaption>
-                <h2>famous daves</h2>
+                <h2>2nd client</h2>
                 <p>some cool description.</p>
                 <a href="#">View more</a>
             </figcaption>
@@ -114,9 +114,9 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <!-- web application development -->
     <div class="grid">
         <figure class="effect-chico">
-            <img src="img/su5.jpg" alt="img15"/>
+            <img src="img/work/suncountry.png" alt="img15"/>
             <figcaption>
-                <h2>macy's</h2>
+                <h2>3rd client</h2>
                 <p>some cool description.</p>
                 <a href="#">View more</a>
             </figcaption>
@@ -125,9 +125,9 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <!-- web application development -->
     <div class="grid">
         <figure class="effect-chico">
-            <img src="img/su2.jpg" alt="img15"/>
+            <img src="img/work/medtronic.png" alt="img15"/>
             <figcaption>
-                <h2>medtronic</h2>
+                <h2>4th client</h2>
                 <p>some cool description.</p>
                 <a href="#">View more</a>
             </figcaption>
@@ -136,9 +136,9 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <!-- web application development -->
     <div class="grid">
         <figure class="effect-chico">
-            <img src="img/su4.jpg" alt="img15"/>
+            <img src="img/work/scoutsoftware.png" alt="img15"/>
             <figcaption>
-                <h2>scouts software</h2>
+                <h2>5th client</h2>
                 <p>some cool description.</p>
                 <a href="#">View more</a>
             </figcaption>
@@ -147,9 +147,9 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <!-- web application development -->
     <div class="grid">
         <figure class="effect-chico">
-            <img src="img/su2.jpg" alt="img15"/>
+            <img src="img/work/treefrogs.png" alt="img15"/>
             <figcaption>
-                <h2>sun country</h2>
+                <h2>6th client</h2>
                 <p>some cool description.</p>
                 <a href="#">View more</a>
             </figcaption>
@@ -197,8 +197,7 @@ FOR GRID: IMAGE SIZE MUST ALL BE SAME: 824 X 550
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <div class="footer-blocks">
-                <h2>work that matters</h2>
-                <div class="red-underline"></div>
+                <h2>do work that matters</h2>
             </div>
         </div>
     </div>
