--- a/s-services.html
+++ b/s-services.html
@@ -279,8 +279,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <div class="footer-blocks">
-                <h2>work that matters</h2>
-                <div class="red-underline"></div>
+                <h2>do work that matters</h2>
             </div>
         </div>
     </div>
